# benchmark

./: .gitignore  README.md  pyproject.toml
shared/: pyproject.toml
shared/shared/agents/: __init__.py  simple_rag.py
shared/shared/graders/: __init__.py  base.py  contents.py  people.py  rag.py  retrieval.py  utils.py
shared/shared/searchers/: __init__.py  base.py  brave.py  claude.py  exa.py  parallel.py  perplexity.py  tavily.py
webcode-benchmark/: .gitignore  check_golden.py  extract_url.py  extractor.py  pyproject.toml
webcode-benchmark/data/contents/: code_contents.jsonl
webcode-benchmark/data/e2e/: code_e2e.jsonl
webcode-benchmark/data/highlights/: code_highlights.jsonl
webcode-benchmark/data/rag/: code_rag.jsonl
webcode-benchmark/evals/: contents.py  e2e.py  highlights.py  rag.py
webcode-benchmark/src/: metrics.py
