[project]
name = "shared"
version = "0.1.0"
description = "Shared graders, searchers, and agents for Exa benchmarks"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
